# palestra-relampago-git-bisect

./: CONTRIBUTING.md  README.md  TUTORIAL.md  pyproject.toml
calculadora/: __init__.py  __main__.py  parser.py
tests/: test_init.py  test_main.py  test_parser.py
