[tool.poetry]
name = "calculadora"
version = "0.0.1"
description = "Projeto para exemplificar o uso do git bisect"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
